[gd_scene load_steps=3 format=3 uid="uid://bvcumfquu1pgc"]

[ext_resource type="Script" uid="uid://bhwy3pkmx5ige" path="res://Scripts/select_level.gd" id="1_a6imh"]

[sub_resource type="LabelSettings" id="LabelSettings_a6imh"]
font_size = 42

[node name="Select Level" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a6imh")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.14509805, 0.14509805, 0.14509805, 1)

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -57.0
offset_top = -83.275024
offset_right = 57.0
offset_bottom = -30.275024
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "PLAY"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -177.0
offset_top = -90.0
offset_right = 177.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2

[node name="Test1" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "TEST 1"

[node name="Test2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "TEST 2"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -141.0
offset_top = 64.325
offset_right = 141.0
offset_bottom = 122.325
grow_horizontal = 2
text = "SELECT STAGE"
label_settings = SubResource("LabelSettings_a6imh")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Test1" to="." method="_on_test_1_pressed"]
[connection signal="pressed" from="VBoxContainer/Test2" to="." method="_on_test_2_pressed"]
